[wayland] Blank webextension popups.
Categories
(Core :: Graphics, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr91 | --- | unaffected |
| firefox100 | --- | unaffected |
| firefox101 | --- | unaffected |
| firefox102 | --- | fixed |
People
(Reporter: emilio, Assigned: mstange)
References
(Blocks 2 open bugs, Regression)
Details
(Keywords: regression)
Attachments
(2 files)
See screenshots. Mozregression says this was caused by bug 1765399, Markus can you take a look?
| Assignee | ||
Comment 1•4 years ago
|
||
Will look.
Updated•4 years ago
|
Comment 2•4 years ago
|
||
Set release status flags based on info from the regressing bug 1765399
| Reporter | ||
Comment 3•4 years ago
•
|
||
For the record in case it's useful, the commit that broke this is https://hg.mozilla.org/mozilla-central/rev/22b568631834e556ab8351ac8458d5b24aa638bd according to git bisect.
| Assignee | ||
Comment 4•4 years ago
|
||
This is fixing an oversight in a patch that was supposed to be functionally neutral.
https://hg.mozilla.org/mozilla-central/rev/22b568631834e556ab8351ac8458d5b24aa638bd#l1.49
The old code always called UpdateVsyncDispatcher, even if the widget's vsync
source was null, and then UpdateVsyncDispatcher fell back to using the global
vsync source when null was passed.
The new code skipped the call entirely when the vsync dispatcher was null,
so it prevented fallback to the global vsync dispatcher.
Now with this patch, we correctly fall back to the global vsync
dispatcher if the widget's dispatcher is null.
This code only runs on Linux wayland; on other platforms, BrowserParent::mVsyncParent
is always null because nothing calls AllocPVsyncParent.
| Assignee | ||
Comment 5•4 years ago
•
|
||
I've attached a speculative fix based on code inspection. I haven't tested it yet.
| Reporter | ||
Comment 6•4 years ago
|
||
(In reply to Markus Stange [:mstange] from comment #5)
I've attached a speculative fix based on code inspection. I haven't tested it yet.
Patch works for me.
| Assignee | ||
Comment 8•4 years ago
|
||
Thanks for testing!
I've gone ahead and queued it for landing; smaug can review it on Monday. It's a really simple fix and it just restores previous behavior.
Comment 10•4 years ago
|
||
| bugherder | ||
Updated•4 years ago
|
Description
•